<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Moments</string>
    <string name="subtitle_activity">Diário de memórias</string>
    <string name="title_add_memory">Adicionar uma nova memória</string>
    <string name="title_edit_memory">Editar memória</string>
    <string name="title_categories">Categorias</string>
    <string name="title_add_category">Adiconar nova tag</string>
    <string name="title_memory">Memórias</string>
    <!-- Label dos EditText -->
    <string name="name_label">Nome:</string>
    <string name="title_label">Título:</string>
    <string name="description_label">Descrição:</string>
    <string name="date_label">Data:</string>
    <string name="cetegory_label">Categoria:</string>
    <!-- Botões -->
    <string name="add_button">Adicionar</string>
    <string name="confirm_button">Concluído</string>
    <string name="edit_btn">Editar</string>
    <string name="delete_btn">Apagar</string>
</resources>